# network-egress-checker

./: .dockerignore  Dockerfile  LICENSE  Makefile  README.md  prd.md  pyproject.toml
.devcontainer/: devcontainer.json
kustomize/base/: configmap.yaml  deployment.yaml  kustomization.yaml  podmonitor.yaml  service.yaml
kustomize/overlays/example/: configmap-patch.yaml  kustomization.yaml
openspec/: project.md
openspec/changes/add-core-checker-kustomize-base/: design.md  proposal.md  tasks.md
openspec/changes/add-core-checker-kustomize-base/specs/check-engine/: spec.md
openspec/changes/add-core-checker-kustomize-base/specs/connection-diagnostics/: spec.md
openspec/changes/add-core-checker-kustomize-base/specs/endpoint-configuration/: spec.md
openspec/changes/add-core-checker-kustomize-base/specs/health-monitoring/: spec.md
openspec/changes/add-core-checker-kustomize-base/specs/kustomize-deployment/: spec.md
openspec/changes/add-core-checker-kustomize-base/specs/metrics-exposure/: spec.md
openspec/changes/add-core-checker-kustomize-base/specs/structured-logging/: spec.md
src/egress_checker/: __init__.py  __main__.py  config.py  diagnostics.py  health.py  logging.py  metrics.py  scheduler.py
src/egress_checker/checks/: __init__.py  http.py  result.py  tcp.py
tests/: conftest.py
tests/integration/: test_app.py
tests/unit/: test_checks.py  test_config.py  test_diagnostics.py  test_health.py  test_logging.py  test_metrics.py  test_scheduler.py
